apps/ttrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tt-rss
  name: ttrss-tt-rss
spec:
  ports:
  - name: http
    port: 3333
    protocol: TCP
    targetPort: http
  selector:
    app: tt-rss
  type: ClusterIP
