apps/ttrss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/issuer: letsencrypt-prod
  labels:
    app: tt-rss
  name: ttrss-tt-rss
spec:
  ingressClassName: nginx
  rules:
  - host: reader.dittos.pe.kr
    http:
      paths:
      - backend:
          service:
            name: ttrss-tt-rss
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - reader.dittos.pe.kr
    secretName: ttrss-tls
